lib/at_parser/at_match.c
/* Generated by re2c 3.0 on Tue Apr  2 09:29:20 2024 */
/*
 * Copyright (c) 2024 Nordic Semiconductor ASA
 *
 * SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 */

/* Generated by re2c 3.0
 *
 * re2c at_match.re -o at_match.c -W --no-debug-info
 */

#include <modem/at_parser.h>

struct at_token at_match(const char *at, const char **remainder)
{
	const char *cursor = at;
	const char *marker = NULL;

	{
		unsigned char yych;
		unsigned int yyaccept = 0;
		yych = *cursor;
		switch (yych) {
		case '\r':
			goto yy3;
		case ' ':
			goto yy4;
		case '"':
			goto yy5;
		case '#':
		case '%':
			goto yy6;
		case '(':
			goto yy7;
		case '+':
			goto yy8;
		case ',':
			goto yy9;
		case '-':
			goto yy10;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
			goto yy11;
		case 'A':
			goto yy13;
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
			goto yy15;
		default:
			goto yy1;
		}
yy1:
		++cursor;
yy2: {
	return (struct at_token){.type = AT_TOKEN_TYPE_INVALID};
}
yy3:
		yych = *++cursor;
		switch (yych) {
		case '\n':
			goto yy17;
		default:
			goto yy2;
		}
yy4:
		yyaccept = 0;
		yych = *(marker = ++cursor);
		switch (yych) {
		case '"':
			goto yy19;
		case '(':
			goto yy22;
		case '+':
		case '-':
			goto yy23;
		case ',':
			goto yy9;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
			goto yy24;
		default:
			goto yy2;
		}
yy5:
		yyaccept = 0;
		yych = *(marker = ++cursor);
		if (yych <= 0x00) {
			goto yy2;
		}
		goto yy20;
yy6:
		yyaccept = 0;
		yych = *(marker = ++cursor);
		switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
			goto yy27;
		default:
			goto yy2;
		}
yy7:
		yyaccept = 0;
		yych = *(marker = ++cursor);
		switch (yych) {
		case '"':
			goto yy29;
		case '(':
			goto yy30;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
			goto yy31;
		default:
			goto yy2;
		}
yy8:
		yyaccept = 0;
		yych = *(marker = ++cursor);
		switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
			goto yy32;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
			goto yy27;
		default:
			goto yy2;
		}
yy9:
		++cursor;
		{
			int off_len = 1;

			if (remainder) {
				*remainder = cursor;
			}
			return (struct at_token){.start = at,
						 .len = cursor - at - off_len,
						 .type = AT_TOKEN_TYPE_EMPTY,
						 .variant = AT_TOKEN_VARIANT_COMMA};
		}
yy10:
		yych = *++cursor;
		switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
			goto yy24;
		default:
			goto yy2;
		}
yy11:
		yych = *++cursor;
		switch (yych) {
		case ' ':
		case '-':
		case '.':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
			goto yy15;
		case ',':
			goto yy33;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
			goto yy11;
		default:
			goto yy12;
		}
yy12: {
	char first = *at;
	char last = *(cursor - 1);
	int off_start = first == ' ' ? 1 : 0;
	int off_len = (last == ',' ? 1 : 0) + off_start;

	if (remainder) {
		*remainder = cursor;
	}
	return (struct at_token){.start = at + off_start,
				 .len = cursor - at - off_len,
				 .type = AT_TOKEN_TYPE_INT,
				 .variant = last == ',' ? AT_TOKEN_VARIANT_COMMA
							: AT_TOKEN_VARIANT_NO_COMMA};
}
yy13:
		yych = *++cursor;
		switch (yych) {
		case 'T':
			goto yy34;
		default:
			goto yy16;
		}
yy14: {
	char first = *at;
	char last = *(cursor - 1);
	int off_start = first == '\r' ? 2 : (first == ' ' ? 1 : 0);
	int off_len = (last == ' ' ? 1 : 0) + off_start;

	if (remainder) {
		*remainder = cursor;
	}
	return (struct at_token){.start = at + off_start,
				 .len = cursor - at - off_len,
				 .type = AT_TOKEN_TYPE_STRING};
}
yy15:
		yych = *++cursor;
yy16:
		switch (yych) {
		case ' ':
		case '-':
		case '.':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
			goto yy15;
		default:
			goto yy14;
		}
yy17:
		yyaccept = 1;
		yych = *(marker = ++cursor);
		switch (yych) {
		case '#':
		case '%':
			goto yy36;
		case '+':
			goto yy37;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
			goto yy15;
		case 'E':
			goto yy38;
		case 'O':
			goto yy39;
		default:
			goto yy18;
		}
yy18: {
	if (remainder) {
		*remainder = cursor;
	}
	return (struct at_token){.start = at, .len = cursor - at, .type = AT_TOKEN_TYPE_RESP};
}
yy19:
		yych = *++cursor;
yy20:
		switch (yych) {
		case 0x00:
			goto yy21;
		case '"':
			goto yy25;
		default:
			goto yy19;
		}
yy21:
		cursor = marker;
		switch (yyaccept) {
		case 0:
			goto yy2;
		case 1:
			goto yy18;
		case 2:
			goto yy12;
		case 3:
			goto yy35;
		case 4:
			goto yy14;
		default:
			goto yy88;
		}
yy22:
		yych = *++cursor;
		switch (yych) {
		case '"':
			goto yy29;
		case '(':
			goto yy30;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
			goto yy31;
		default:
			goto yy21;
		}
yy23:
		yych = *++cursor;
		switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
			goto yy24;
		default:
			goto yy21;
		}
yy24:
		yych = *++cursor;
		switch (yych) {
		case ',':
			goto yy33;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
			goto yy24;
		default:
			goto yy12;
		}
yy25:
		yych = *++cursor;
		switch (yych) {
		case ',':
			goto yy40;
		default:
			goto yy26;
		}
yy26: {
	char first = *at;
	char last = *(cursor - 1);
	/* `+1` accounts for leading quote. */
	int off_start = (first == ' ' ? 1 : 0) + 1;
	/* `+1` accounts for trailing quote. */
	int off_len = (last == ',' ? 1 : 0) + off_start + 1;

	if (remainder) {
		*remainder = cursor;
	}
	return (struct at_token){.start = at + off_start,
				 .len = cursor - at - off_len,
				 .type = AT_TOKEN_TYPE_QUOTED_STRING,
				 .variant = last == ',' ? AT_TOKEN_VARIANT_COMMA
							: AT_TOKEN_VARIANT_NO_COMMA};
}
yy27:
		yych = *++cursor;
yy28:
		switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
			goto yy27;
		case ':':
			goto yy41;
		default:
			goto yy21;
		}
yy29:
		yych = *++cursor;
		switch (yych) {
		case 0x00:
			goto yy21;
		case '"':
			goto yy43;
		default:
			goto yy29;
		}
yy30:
		yych = *++cursor;
		switch (yych) {
		case '"':
			goto yy44;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
			goto yy45;
		default:
			goto yy21;
		}
yy31:
		yych = *++cursor;
		switch (yych) {
		case ')':
			goto yy46;
		case ',':
			goto yy22;
		case '-':
			goto yy48;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
			goto yy31;
		default:
			goto yy21;
		}
yy32:
		yyaccept = 2;
		yych = *(marker = ++cursor);
		switch (yych) {
		case ',':
			goto yy33;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
			goto yy32;
		case ':':
			goto yy41;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
			goto yy27;
		default:
			goto yy12;
		}
yy33:
		++cursor;
		goto yy12;
yy34:
		yyaccept = 3;
		yych = *(marker = ++cursor);
		switch (yych) {
		case ' ':
		case '-':
		case '.':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
			goto yy15;
		case '#':
		case '%':
		case '+':
			goto yy49;
		case '=':
			goto yy50;
		default:
			goto yy35;
		}
yy35: {
	char last = *(cursor - 1);
	int off_len = last == '=' ? 1 : 0;

	if (remainder) {
		*remainder = cursor;
	}
	return (struct at_token){
		.start = at, .len = cursor - at - off_len, .type = AT_TOKEN_TYPE_CMD_SET};
}
yy36:
		yych = *++cursor;
		switch (yych) {
		case ':':
			goto yy21;
		default:
			goto yy28;
		}
yy37:
		yych = *++cursor;
		switch (yych) {
		case ':':
			goto yy21;
		case 'C':
			goto yy51;
		default:
			goto yy28;
		}
yy38:
		yych = *++cursor;
		switch (yych) {
		case 'R':
			goto yy52;
		default:
			goto yy16;
		}
yy39:
		yych = *++cursor;
		switch (yych) {
		case 'K':
			goto yy53;
		default:
			goto yy16;
		}
yy40:
		++cursor;
		goto yy26;
yy41:
		yych = *++cursor;
		switch (yych) {
		case ' ':
			goto yy54;
		default:
			goto yy42;
		}
yy42: {
	char first = *at;
	char last = *(cursor - 1);
	int off_start = first == '\r' ? 2 : 0;
	/* `+1` accounts for colon. */
	int off_len = (last == ' ' ? 1 : 0) + off_start + 1;

	if (remainder) {
		*remainder = cursor;
	}
	return (struct at_token){
		.start = at + off_start, .len = cursor - at - off_len, .type = AT_TOKEN_TYPE_NOTIF};
}
yy43:
		yych = *++cursor;
		switch (yych) {
		case ')':
			goto yy46;
		case ',':
			goto yy22;
		case '-':
			goto yy48;
		default:
			goto yy21;
		}
yy44:
		yych = *++cursor;
		switch (yych) {
		case 0x00:
			goto yy21;
		case '"':
			goto yy55;
		default:
			goto yy44;
		}
yy45:
		yych = *++cursor;
		switch (yych) {
		case ')':
			goto yy56;
		case ',':
			goto yy30;
		case '-':
			goto yy57;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
			goto yy45;
		default:
			goto yy21;
		}
yy46:
		yych = *++cursor;
		switch (yych) {
		case ',':
			goto yy58;
		default:
			goto yy47;
		}
yy47: {
	char first = *at;
	char last = *(cursor - 1);
	/* `+1` accounts for leading parenthesis. */
	int off_start = (first == ' ' ? 1 : 0) + 1;
	/* `+1` accounts for trailing parenthesis. */
	int off_len = (last == ',' ? 1 : 0) + off_start + 1;

	if (remainder) {
		*remainder = cursor;
	}
	return (struct at_token){.start = at + off_start,
				 .len = cursor - at - off_len,
				 .type = AT_TOKEN_TYPE_ARRAY,
				 .variant = last == ',' ? AT_TOKEN_VARIANT_COMMA
							: AT_TOKEN_VARIANT_NO_COMMA};
}
yy48:
		yych = *++cursor;
		switch (yych) {
		case '"':
			goto yy59;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
			goto yy60;
		default:
			goto yy21;
		}
yy49:
		yych = *++cursor;
		switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
			goto yy61;
		default:
			goto yy21;
		}
yy50:
		++cursor;
		goto yy35;
yy51:
		yych = *++cursor;
		switch (yych) {
		case 'M':
			goto yy62;
		default:
			goto yy28;
		}
yy52:
		yych = *++cursor;
		switch (yych) {
		case 'R':
			goto yy63;
		default:
			goto yy16;
		}
yy53:
		yyaccept = 4;
		yych = *(marker = ++cursor);
		switch (yych) {
		case '\r':
			goto yy64;
		default:
			goto yy16;
		}
yy54:
		++cursor;
		goto yy42;
yy55:
		yych = *++cursor;
		switch (yych) {
		case ')':
			goto yy56;
		case ',':
			goto yy30;
		case '-':
			goto yy57;
		default:
			goto yy21;
		}
yy56:
		yych = *++cursor;
		switch (yych) {
		case ')':
			goto yy46;
		case ',':
			goto yy22;
		default:
			goto yy21;
		}
yy57:
		yych = *++cursor;
		switch (yych) {
		case '"':
			goto yy65;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
			goto yy66;
		default:
			goto yy21;
		}
yy58:
		++cursor;
		goto yy47;
yy59:
		yych = *++cursor;
		switch (yych) {
		case 0x00:
			goto yy21;
		case '"':
			goto yy56;
		default:
			goto yy59;
		}
yy60:
		yych = *++cursor;
		switch (yych) {
		case ')':
			goto yy46;
		case ',':
			goto yy22;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
			goto yy60;
		default:
			goto yy21;
		}
yy61:
		yyaccept = 3;
		yych = *(marker = ++cursor);
		switch (yych) {
		case '\r':
			goto yy67;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
			goto yy61;
		case '=':
			goto yy68;
		case '?':
			goto yy69;
		default:
			goto yy35;
		}
yy62:
		yych = *++cursor;
		switch (yych) {
		case 'E':
		case 'S':
			goto yy70;
		default:
			goto yy28;
		}
yy63:
		yych = *++cursor;
		switch (yych) {
		case 'O':
			goto yy71;
		default:
			goto yy16;
		}
yy64:
		yych = *++cursor;
		switch (yych) {
		case '\n':
			goto yy72;
		default:
			goto yy21;
		}
yy65:
		yych = *++cursor;
		switch (yych) {
		case 0x00:
			goto yy21;
		case '"':
			goto yy73;
		default:
			goto yy65;
		}
yy66:
		yych = *++cursor;
		switch (yych) {
		case ')':
			goto yy56;
		case ',':
			goto yy30;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
			goto yy66;
		default:
			goto yy21;
		}
yy67:
		yych = *++cursor;
		switch (yych) {
		case '\n':
			goto yy74;
		default:
			goto yy21;
		}
yy68:
		yych = *++cursor;
		switch (yych) {
		case '?':
			goto yy75;
		default:
			goto yy35;
		}
yy69:
		++cursor;
		{
			int off_len = 1;

			if (remainder) {
				*remainder = cursor;
			}
			return (struct at_token){.start = at,
						 .len = cursor - at - off_len,
						 .type = AT_TOKEN_TYPE_CMD_READ};
		}
yy70:
		yych = *++cursor;
		switch (yych) {
		case ' ':
			goto yy76;
		default:
			goto yy28;
		}
yy71:
		yych = *++cursor;
		switch (yych) {
		case 'R':
			goto yy53;
		default:
			goto yy16;
		}
yy72:
		++cursor;
		goto yy18;
yy73:
		yych = *++cursor;
		switch (yych) {
		case ')':
			goto yy56;
		case ',':
			goto yy30;
		default:
			goto yy21;
		}
yy74:
		yych = *++cursor;
		switch (yych) {
		case 'A':
			goto yy77;
		default:
			goto yy21;
		}
yy75:
		++cursor;
		{
			int off_len = 2;
